# girly-bird

./: .gitignore  Makefile  README.md  Taskfile.yml  cspell.json  example_textbox.py  gamemain.py  images.rar  main.py  main.spec  make.bat  pyproject.toml  requirements.txt  use_ge.py
.task/checksum/: watch
chilly_bird/: configs.py
conf/: config.yaml
diagrams/: classes.puml  package-tree.txt  packages.puml
notebooks/: configs.ipynb  workbench.ipynb
scripts/: extract_code.py
src/: grapheditor.py
src/chilly_bird/: __init__.py  configs.py  game.py  game_factory.py  graph_editor.py  logging.py  objects.py  photoeditor.py  states.py  types.py  utils.py
src/chilly_bird/objects/: __init__.py  bird.py  buttons.py  girls.py  pipes.py  road.py  textboxes.py
src/chilly_bird/states/: __init__.py  base.py  flying.py  game_over.py  sprite_editor.py  start_screen.py
