[project]
name = "chilly-bird"
version = "0.2.0"
description = "Default template for PDM package"
authors = [{ name = "M" }]
dependencies = [
    "pygame>=2.5.2",
    "pygame-widgets>=1.1.4",
    "omegaconf>=2.3.0",
    "loguru>=0.7.2",
    "typing-extensions>=4.9.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
test = ["pytest>=7.4.3"]
jupyter = ["ipykernel>=6.27.1"]
lint = ["ruff>=0.1.8", "black>=23.12.0"]

[tool.pdm.scripts]
start = {call = "game:main", help = "Starts the game"}

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
src = ["chilly_bird"]
line-length = 88
target-version = "py310"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    # "D",   # pydocstyle
    "I",   # isort
    "PL",  # pylint
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "PT",  # flake8-pytest-style
]
ignore = [
    "RUF001", # ambiguous cyrillic letters
    "RUF002", # ambiguous cyrillic letters
]

[tool.ruff.per-file-ignores]
"test_custom_list.py" = ["RUF005"]

[tool.ruff.isort]
known-first-party = ["chilly_bird"]

[tool.pytest.ini_options]
# pythonpath = ["src"]
addopts = ["--import-mode=importlib"]

[tool.coverage.report]
omit = ["./.venv/*"]
