[project]
name = "chilly-bird"
version = "0.6.0"
description = "Just a game"
authors = [{ name = "M" }]
dependencies = [
    "pygame>=2.5.2",
    "omegaconf>=2.3.0",
    "loguru>=0.7.2",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "MIT" }

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
src = ["chilly_bird"]
line-length = 88
target-version = "py310"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    # "D",   # pydocstyle
    "I",   # isort
    "PL",  # pylint
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "PT",  # flake8-pytest-style
]
ignore = [
    "RUF001", # ambiguous cyrillic letters
    "RUF002", # ambiguous cyrillic letters
]

[tool.ruff.per-file-ignores]
"test_custom_list.py" = ["RUF005"]

[tool.ruff.isort]
known-first-party = ["chilly_bird"]

[tool.pytest.ini_options]
# pythonpath = ["src"]
addopts = ["--import-mode=importlib"]

[tool.coverage.report]
omit = ["./.venv/*"]

[tool.pdm]
distribution = true
[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.1",
]
jupyter = [
    "ipykernel>=6.29.2",
]
lint = [
    "ruff>=0.2.2",
    "black>=24.2.0",
    "pylint>=3.0.3",
]
dist = [
    "pyinstaller>=6.4.0",
    "Pillow>=10.2.0",
]

[tool.pdm.scripts]
start = {call = "main:main", help = "Starts the game"}

