[project]
name = "chilly-bird"
version = "0.7.1"
description = "Just a game"
authors = [{ name = "M" }]
dependencies = [
    "pygame>=2.5.2",
    "omegaconf>=2.3.0",
    "loguru>=0.7.2",
    "typing-extensions>=4.9.0",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "MIT" }

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
src = ["chilly_bird"]
line-length = 88
target-version = "py310"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
select = [
    "D",   # pydocstyle
    "ANN", # flake8-annotations
    "TCH", # flake8-type-checking
    "FBT", # flake8-boolean-trap

    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "I",    # isort
    "PL",   # pylint
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "PTH",  # flake8-use-pathlib
    "TRY",  # tryceratops
    "PERF", # Perflint 
    "FURB", # refurb 
    "PT",   # flake8-pytest-style
]
ignore = [
    "RUF001", # ambiguous cyrillic letters
    "RUF002", # ambiguous cyrillic letters
    "ANN101", # missing-type-self #? deprecated
    "D202",   # no-blank-line-after-function
]

# [tool.ruff.per-file-ignores]
# "test_custom_list.py" = ["RUF005"]

[tool.ruff.isort]
known-first-party = ["chilly_bird"]

[tool.pytest.ini_options]
# pythonpath = ["src"]
addopts = ["--import-mode=importlib"]

[tool.coverage.report]
omit = ["./.venv/*"]

[tool.pdm]
distribution = true
[tool.pdm.dev-dependencies]
test = ["pytest>=8.0.1"]
jupyter = ["ipykernel>=6.29.2"]
lint = ["ruff>=0.2.2", "black>=24.2.0", "pylint>=3.0.3"]
dist = ["pyinstaller>=6.4.0", "Pillow>=10.2.0"]
type-checkers = ["mypy>=1.9.0"]

[tool.pdm.scripts]
start = { call = "main:main", help = "Starts the game" }
